# f2fs-tools

./: Makefile.am  configure.ac
dump_inodes/: main.c
dumpinodes/: Makefile.am  cmd  debug  format  main.c
fsck/: dir.c  dump.c  f2fs.h  fsck.c  fsck.h  main.c  mount.c  resize.c
include/: f2fs_fs.h
lib/: libf2fs.c
mkfs/: f2fs_format.c  f2fs_format_main.c
tools/f2fs_io/: f2fs_io.c
